--- a/src/app/features/shop/product-details/product-details.component.html
+++ b/src/app/features/shop/product-details/product-details.component.html
@@ -100,7 +100,7 @@
                         <div class="d-flex align-items-center pb-2 mb-2 mt-3">
                             <button type="button" style="background-color: black;" data-mdb-button-init data-mdb-ripple-init
                                 class="btn btn-dark btn-add-to-cart"
-                                (click)="handleCartBtnClicked()">
+                                (click)="handleCartBtnClicked(product)">
                                 Thêm vào giỏ hàng
                             </button>
                             <button type="button" style="background-color: black;" data-mdb-button-init data-mdb-ripple-init
