--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -40,7 +40,7 @@
                                 <div class="" style="position: relative; display: inline-flex;">
                                     <i class="fa-solid fa-cart-shopping"></i>
                                     <div class="cart-number-notify">
-                                        <span>2</span>
+                                        <span>{{ cart.item_quantity }}</span>
                                     </div>
                                 </div>
                             </a>
