--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -28,7 +28,10 @@
       </div>
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
-          <button (click)="handleCartBtnClicked(item)" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
+          <!-- <button (click)="handleCartBtnClicked(item)" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
+            <img src="../../../../assets/images/icons/icons8-add-shopping-cart-32.png" alt="" width="24px">
+          </button> -->
+          <button (click)="navigateToProductDetail(item.id)" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
             <img src="../../../../assets/images/icons/icons8-add-shopping-cart-32.png" alt="" width="24px">
           </button>
           <button style="font-size: 14px;" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark">Mua ngay</button>
