update shop details

--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -31,10 +31,11 @@
           <!-- <button (click)="handleCartBtnClicked(item)" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
             <img src="../../../../assets/images/icons/icons8-add-shopping-cart-32.png" alt="" width="24px">
           </button> -->
-          <button (click)="navigateToProductDetail(item.id)" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
+          <button (click)="navigateToProductDetail(item.id)" style="width: 100%;justify-content: space-evenly;" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart d-flex">
             <img src="../../../../assets/images/icons/icons8-add-shopping-cart-32.png" alt="" width="24px">
+            <p style="margin: 0;font-size: 14px;">Thêm vào giỏ hàng</p>
           </button>
-          <button style="font-size: 14px;" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark">Mua ngay</button>
+          <!-- <button style="font-size: 14px;" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark">Mua ngay</button> -->
         </div>
       </div>
     </div>
