--- a/src/app/features/cart/cart.component.html
+++ b/src/app/features/cart/cart.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-12 col-lg-8">
         <div class="card mb-4">
           <div class="card-header py-3">
-            <h5 class="d-flex mb-0">GIỎ HÀNG (<p style="color: red;">{{cart.item_quantity}}&nbsp;</p>SẢN PHẨM)</h5>
+            <h5 style="font-family: 'Roboto';" class="d-flex mb-0">GIỎ HÀNG (<p style="color: red;font-family: 'Roboto';">{{cart.item_quantity}}&nbsp;</p>SẢN PHẨM)</h5>
           </div>
           <div class="card-body">
             <!-- Single item -->
@@ -21,9 +21,9 @@
 
               <div class="col-lg-5 col-md-5 mb-4 mb-lg-0">
                 <!-- Data -->
-                <p><strong>{{item.item.name}}</strong></p>
-                <p>Màu sắc: {{item.item.color[0].value}}</p>
-                <p>Size: {{item.item.size[0].value}}</p>
+                <p style="font-family: 'Roboto';"><strong>{{item.item.name}}</strong></p>
+                <p style="font-family: 'Roboto';">Màu sắc: {{item.item.color[0].value}}</p>
+                <p style="font-family: 'Roboto';">Size: {{item.item.size[0].value}}</p>
 
                 <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-sm me-1 mb-2"
                   data-mdb-tooltip-init title="Remove item"
@@ -35,13 +35,13 @@
               <div class="col-lg-4 col-md-4 mb-4 mb-lg-0">
                 <!-- Price -->
                 <div class="d-flex text-start text-md-center">
-                  <p class="me-2">Đơn giá:</p>
-                  <strong style="color: red;">{{item.price | currency:'VND':'symbol'}}</strong>
+                  <p style="font-family: 'Roboto';" class="me-2">Đơn giá:</p>
+                  <strong style="font-family: 'Roboto';" style="color: red;">{{item.price | currency:'VND':'symbol'}}</strong>
                 </div>
                 <!-- Price -->
                 <!-- Quantity -->
                 <div class="d-flex flex-column mb-4" style="max-width: 300px">
-                  <label class="form-label" for="form1">Số lượng</label>
+                  <label style="font-family: 'Roboto';" class="form-label" for="form1">Số lượng</label>
                   <div class="d-flex">
                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark px-3 me-2"
                       onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
@@ -49,7 +49,7 @@
                     </button>
                     <div data-mdb-input-init class="form-outline">
                       <input id="form1" min="0" name="quantity" value="{{item.quantity}}" type="number" class="form-control"
-                        style="text-align: center;" />
+                        style="text-align: center;font-family: 'Roboto';" />
                     </div>
                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark px-3 ms-2"
                       onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
@@ -69,19 +69,19 @@
       <div class="col-md col-lg-4">
         <div class="card mb-4">
           <div class="card-header py-3">
-            <h5 class="mb-0">Chi tiểt thanh toán</h5>
+            <h5 style="font-family: 'Roboto';" class="mb-0">Chi tiểt thanh toán</h5>
           </div>
           <div class="card-body">
             <ul *ngIf="cart" class="list-group list-group-flush">
-              <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+              <li style="font-family: 'Roboto';" class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                 Sản phẩm
                 <span>{{cart.total_price| currency:'VND':'symbol'}}</span>
               </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+              <li style="font-family: 'Roboto';" class="list-group-item d-flex justify-content-between align-items-center px-0">
                 Vận chuyển
                 <span>{{30000 | currency:'VND':'symbol'}}</span>
               </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+              <li style="font-family: 'Roboto';" class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                 <div>
                   <strong>Tổng cộng</strong>
                 </div>
@@ -89,7 +89,7 @@
               </li>
             </ul>
 
-            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block">
+            <button style="font-family: 'Roboto';" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block">
               Thanh toán giỏ hàng
             </button>
           </div>
