--- a/src/app/features/home/home/home.component.css
+++ b/src/app/features/home/home/home.component.css
@@ -80,6 +80,7 @@
   .slide-content h2 {
     font-size: 2.5rem;
     margin-bottom: 10px;
+    font-family: 'Roboto';
   }
   
   .slide-content p {
@@ -136,6 +137,7 @@
     text-align: center;
     margin-bottom: 40px;
     font-size: 2.5rem;
+    font-family: 'Roboto';
   }
   
   .product-grid {
@@ -185,14 +187,16 @@
   
   /* Categories Styles */
   .categories {
-    padding: 40px 0;
+    /* padding: 40px 0; */
     /*background-color: #f2f2f2;*/
+    padding: 0 0 40px 0;
   }
   
   .categories h2 {
     text-align: center;
     margin-bottom: 40px;
     font-size: 2.5rem;
+    font-family: 'Roboto';
   }
   
   .category-grid {
@@ -226,6 +230,7 @@
     color: #fff;
     font-size: 1.5rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: 'Roboto';
   }
   
   /* Animations */
@@ -298,3 +303,8 @@
       font-size: 0.9rem;
     }
   }
+
+  .btn-add-to-cart{
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+}
