--- a/src/app/features/home/home/home.component.html
+++ b/src/app/features/home/home/home.component.html
@@ -21,16 +21,21 @@
       <div class="product-grid">
         <div class="product-card p-2" *ngFor="let product of vipItems" style="border-radius: 8px;">
           <img src="../../../../assets/images/data-test/{{product.image[0].value}}" alt="{{product.name}}" style="border-radius: 12px;cursor: pointer;" loading="lazy">
-          <h3 style="text-align: left;cursor: pointer;">{{ product.name }}</h3>
+          <h5 style="display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;line-height: 1.2; height: 52px; overflow: hidden;font-size: 14px;text-align: left;font-family: 'Roboto';"><a style="text-decoration: none;" class="text-dark">{{ product.name }}</a></h5>
           <div class="d-flex justify-content-between">
-            <p><a href="#!" class="text-dark price-item-custom" style="color: red !important; text-decoration: none;font-weight: bold;">{{ product.pricesale | currency:'VND':'symbol' }}</a></p>
-            <p style="text-decoration: line-through;">{{ product.price | currency:'VND':'symbol'}} <span class="badge bg-danger">{{ (100 - (product.pricesale * 100 / product.price)) | number: '1.0-2' }}%</span></p>
+            <p><a href="#!" class="text-dark price-item-custom" style="color: red !important; text-decoration: none;font-weight: bold;font-family: 'Roboto';">{{ product.pricesale | currency:'VND':'symbol' }}</a></p>
+            <p style="text-decoration: line-through;font-family: 'Roboto';">{{ product.price | currency:'VND':'symbol'}} <span class="badge bg-danger" style="font-family: 'Roboto';">{{ (100 - (product.pricesale * 100 / product.price)) | number: '1.0-2' }}%</span></p>
           </div>
           <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
-            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
+            <!-- <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
               <img src="../../../../assets/images/icons/icons8-add-shopping-cart-32.png" alt="" style="width: 24px !important;height: 24px !important;margin: 0 !important;">
             </button>
-            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark">Mua ngay</button>
+            
+            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark">Mua ngay</button> -->
+            <button style="width: 100%;justify-content: space-evenly;align-items: center;" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart d-flex">
+              <img src="../../../../assets/images/icons/icons8-add-shopping-cart-32.png" alt="" style="width: 24px;height: auto;margin: 0;">
+              <p style="margin: 0;font-size: 14px;">Thêm vào giỏ hàng</p>
+            </button>
           </div>
         </div>
       </div>
