--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -13,12 +13,12 @@
       <div class="card-body pb-0">
         <div class="d-flex justify-content-between">
           <div>
-            <h5 style="display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;line-height: 1.2; height: 52px; overflow: hidden;font-size: 14px;"><a (click)="navigateToProductDetail(item.id)" class="text-dark">{{ item.name }}</a></h5>
+            <h5 style="display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;line-height: 1.2; height: 52px; overflow: hidden;font-size: 14px;font-family: 'Roboto';"><a (click)="navigateToProductDetail(item.id)" class="text-dark">{{ item.name }}</a></h5>
           </div>
         </div>
       </div>
       <div class="card-body pb-0">
-        <div class="d-flex justify-content-between" style="font-size: 14px;">
+        <div class="d-flex justify-content-between" style="font-size: 14px;font-family: 'Roboto';">
           <p><a class="text-dark price-item-custom">{{ item.pricesale | currency:'VND':'symbol' }}</a></p>
           <p style="text-decoration: line-through;">
             {{ item.price | currency:'VND':'symbol'}} 
@@ -31,9 +31,9 @@
           <!-- <button (click)="handleCartBtnClicked(item)" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
             <img src="../../../../assets/images/icons/icons8-add-shopping-cart-32.png" alt="" width="24px">
           </button> -->
-          <button (click)="navigateToProductDetail(item.id)" style="width: 100%;justify-content: space-evenly;" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart d-flex">
-            <img src="../../../../assets/images/icons/icons8-add-shopping-cart-32.png" alt="" width="24px">
-            <p style="margin: 0;font-size: 14px;">Thêm vào giỏ hàng</p>
+          <button (click)="navigateToProductDetail(item.id)" style="width: 100%;justify-content: space-evenly;align-items: center;" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart d-flex">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <p style="margin: 0;font-size: 14px;font-family: 'Roboto';">Thêm vào giỏ hàng</p>
           </button>
           <!-- <button style="font-size: 14px;" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark">Mua ngay</button> -->
         </div>
@@ -56,7 +56,7 @@
         </a>
       </li>
       <li class="page-item" *ngFor="let page of [].constructor(totalPages); let i = index">
-        <a class="page-link" (click)="goToPage(i + 1)" [class.active]="currentPage === (i + 1)">{{ i + 1 }}</a>
+        <a style="font-family: 'Roboto';" class="page-link" (click)="goToPage(i + 1)" [class.active]="currentPage === (i + 1)">{{ i + 1 }}</a>
       </li>
       <li class="page-item" [class.disabled]="currentPage === totalPages">
         <a class="page-link" (click)="nextPage()" aria-label="Next">
