--- a/src/app/features/shop/filter-price/filter-price.component.html
+++ b/src/app/features/shop/filter-price/filter-price.component.html
@@ -1,24 +1,67 @@
 <div class="dropdown d-flex justify-content-between mb-3 mt-2">
-  <div *ngIf="selectedColors.length > 0 || selectedCategory" class="filter-on-url d-flex align-items-center">
-    <p class="mb-0" style="font-size: 14px;">Đang lọc:</p>
-    
-    <p class="mb-0">Màu sắc</p>
-    <p class="mb-0" *ngFor="let color of selectedColors">
-      <span class="badge text-bg-danger">{{ color }}</span>
+  <div
+    *ngIf="selectedColors.length > 0 || selectedCategory"
+    class="filter-on-url d-flex align-items-center"
+  >
+    <!-- <p class="mb-0" style="font-size: 14px">Đang lọc:</p> -->
+
+    <!-- <p class="mb-0">Màu sắc</p> -->
+    <p
+      class="mb-0 me-2"
+      style="
+        background-color: #ccc;
+        border-radius: 8px;
+        padding: 4px;
+        display: flex;
+      "
+      *ngFor="let color of selectedColors"
+    >
+      <span>{{ color }}</span>
+      <span
+        class="badge"
+        (click)="clearColorFilter(color)"
+        style="cursor: pointer; font-size: 14px; color: black"
+        >x</span
+      >
     </p>
 
-    <p class="mb-0">Danh mục</p>
-    <p class="mb-0" *ngIf="selectedCategory">
-      <span class="badge text-bg-warning">{{ selectedCategory }}</span>
+    <!-- <p class="mb-0">Danh mục</p> -->
+    <p
+      class="mb-0 me-2"
+      style="
+        background-color: #ccc;
+        border-radius: 8px;
+        padding: 4px;
+        display: flex;
+      "
+      class="mb-0"
+      *ngIf="selectedCategory"
+    >
+      <span>{{ selectedCategory }}</span>
+      <span
+        class="badge"
+        (click)="clearSelectFilter()"
+        style="cursor: pointer; font-size: 14px; color: black"
+        >x</span
+      >
     </p>
 
-    <span class="badge text-bg-light" (click)="clearFilters()" style="cursor: pointer; font-size: 14px;">x</span>
+    <span
+      class="badge text-bg-light"
+      (click)="clearFilters()"
+      style="cursor: pointer; font-size: 14px"
+      >Xoá tất cả</span
+    >
   </div>
-  <div>
-
-  </div>
-  <select class="form-select" style="width: 200px; font-size: 15px;" aria-label="Default select example">
+  <div></div>
+  <select
+    class="form-select"
+    style="width: 200px; font-size: 15px"
+    aria-label="Default select example"
+  >
     <option value="all" selected>Tất cả</option>
-    <option *ngFor="let filter of filterprice" [value]="filter.name">{{ filter.name }}</option>
+    <option *ngFor="let filter of filterprice" [value]="filter.name">
+      {{ filter.name }}
+    </option>
   </select>
 </div>
