--- a/src/app/features/admin/manage-brand/manage-brand.component.html
+++ b/src/app/features/admin/manage-brand/manage-brand.component.html
@@ -99,8 +99,8 @@
         </div>
         <div class="mb-4">
             <label class="form-check-label me-2" for="active">Trạng thái:</label>
-            <input class="form-check-input" type="radio" name="active" id="visible" value="true" [(ngModel)]="createBrand.status"> Hoạt động
-            <input class="form-check-input ms-2" type="radio" name="active" id="disable" value="false" [(ngModel)]="createBrand.status"> ngừng bán
+            <input class="form-check-input" type="radio" name="active" id="visible" [value]="true" [(ngModel)]="createBrand.status"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable" [value]="false" [(ngModel)]="createBrand.status"> ngừng bán
         </div>
         <div class="d-flex justify-content-end gap-2 mt-4">
             <p-button label="Hủy" severity="secondary" (onClick)="visible = false" />
